--- a/Registration_Form.html
+++ b/Registration_Form.html
@@ -8,6 +8,7 @@
     <link
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
       rel="stylesheet" />
+    <script src="./stringMethos.js"></script>
   </head>
   <body>
     <div class="container col-lg-4 shadow p-3 mb-5 bg-body rounded mt-3">
