--- a/Jform.html
+++ b/Jform.html
@@ -3,28 +3,96 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <script src="./jquery-min-3.7.1.js"></script>
+    <title>Registration Form</title>
+    <!-- Bootstrap CSS -->
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
   </head>
   <body>
-    <input type="text" name="name" id="name" />
-    <input type="email" name="email" id="email" />
-    <input type="password" name="password" id="password" />
-    <button id="btn">Submit</button>
-    <p id="result"></p>
+    <div class="container mt-5">
+      <div class="row justify-content-center">
+        <div class="col-md-6">
+          <div class="card">
+            <div class="card-header bg-primary text-white">
+              <h4 class="mb-0">Registration Form</h4>
+            </div>
+            <div class="card-body">
+              <form id="registrationForm">
+                <div class="form-group">
+                  <label for="name">Name</label>
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="name"
+                    name="name"
+                    placeholder="Enter your name"
+                    required />
+                </div>
+                <div class="form-group">
+                  <label for="email">Email address</label>
+                  <input
+                    type="email"
+                    class="form-control"
+                    id="email"
+                    name="email"
+                    placeholder="Enter your email"
+                    required />
+                </div>
+                <div class="form-group">
+                  <label for="password">Password</label>
+                  <input
+                    type="password"
+                    class="form-control"
+                    id="password"
+                    name="password"
+                    placeholder="Enter your password"
+                    required />
+
+                  
+                </div>
+                <button type="submit" class="btn btn-primary">Submit</button>
+              </form>
+              <p id="result" class="mt-3"></p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- jQuery and Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
+
     <script>
       $(document).ready(function () {
-        $("#btn").click(function () {
+        $("#registrationForm").submit(function (event) {
+          event.preventDefault(); 
+
           var Name = $("#name").val();
           var Email = $("#email").val();
           var Password = $("#password").val();
 
+          
+          var passwordRegex = /^(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}$/;
+
           if (Name === "" || Email === "" || Password === "") {
             alert("Please fill in all fields");
-          } else {
-            $("#result").text(
-              `Name = ${Name}, Email = ${Email}, Password = ${Password}`
+          } else if (!passwordRegex.test(Password)) {
+            alert(
+              "Password must be at least 8 characters long, and contain at least one uppercase letter, one lowercase letter, and one number."
             );
+          } else {
+            $("#result").html(`
+            <div class="alert alert-success" role="alert">
+              Registration Successful! <br>
+              Name: ${Name} <br>
+              Email: ${Email} <br>
+              Password: ${Password} 
+            </div>
+          `);
+
+            $("#registrationForm")[0].reset();
           }
         });
       });
